center card alignment bug

--- a/card.css
+++ b/card.css
@@ -22,7 +22,8 @@
     height: 100%;
     gap: .5em;
     display: grid;
-    place-content: center;
+    /* place-content: center; */
+    align-content: center;
 }
 
 .card-button {
